--- a/context-practice-1/package.json
+++ b/context-practice-1/package.json
@@ -13,6 +13,6 @@
   },
   "scripts": {
     "build": "webpack",
-    "watch": "webpack -w"
+    "watch": "browser-sync start --server --directory --files '*' webpack -w"
   }
 }
